# stork

./: .gitattributes  .gitignore  .ocamlformat  .spin  CONTRIBUTING.md  Dockerfile  LICENSE  README.md  dune-project  esy.json  stork.opam  stork.opam.dev.locked  stork.opam.locked
test/: dune  gen_test.ml  test_utils.ml  utils_test.ml
test/_snapshots/: Generator.0072e5d9.0.snapshot  Generator.077de3bb.0.snapshot  Generator.0f08ee5e.0.snapshot  Generator.16eb4176.0.snapshot  Generator.180d7341.0.snapshot  Generator.280d3627.0.snapshot  Generator.2ad8cc04.0.snapshot  Generator.33d5aa08.0.snapshot  Generator.41f036fa.0.snapshot  Generator.42ed0bb8.0.snapshot  Generator.4a4e14b4.0.snapshot  Generator.5010ed3b.0.snapshot  Generator.5e881dba.0.snapshot  Generator.6e7eb4f2.0.snapshot  Generator.77f162e3.0.snapshot  Generator.8c0c3a63.0.snapshot  Generator.8d9d4efd.0.snapshot  Generator.9212c23f.0.snapshot  Generator.92fe88c4.0.snapshot  Generator.9f5004c1.0.snapshot  Generator.ba0d7484.0.snapshot  Generator.bbb0081d.0.snapshot  Generator.c464b42d.0.snapshot  Generator.c81db9c8.0.snapshot  Generator.cdf20a56.0.snapshot  Generator.d4ec5b67.0.snapshot  Generator.d5d69f4b.0.snapshot  Generator.d6a737d8.0.snapshot  Generator.f34121eb.0.snapshot
test/custom_output_prefix/: cram.t  custom_output_prefix_2.json  custom_output_prefix_user_fns.ml  dune  original_output_prefix_1.atd  original_output_prefix_2.atd  original_output_prefix_bar.atd  test_json_parsing.expected  test_json_parsing.ml
test/custom_output_prefix.t/: custom_output_prefix_1.json
test/custom_output_prefix/cramtests/: custom_output_prefix.ml.t  custom_output_prefix.mli.t  custom_output_prefix_1_j.ml.t  custom_output_prefix_1_j.mli.t  custom_output_prefix_1_t.ml.t  custom_output_prefix_1_t.mli.t  custom_output_prefix_bar_j.ml.t  custom_output_prefix_bar_j.mli.t  custom_output_prefix_bar_t.ml.t  custom_output_prefix_bar_t.mli.t  custom_output_prefix_upgrader_t.ml.t  custom_output_prefix_upgrader_t.mli.t  dune
test/nominal_variant/: dune  nominal_variant_1.atd  nominal_variant_2.atd  nominal_variant_user_fns.ml
test/nominal_variant.t/: run.t
test/nominal_variant/cramtests/: nominal_variant.ml.t  nominal_variant.mli.t  nominal_variant_1_j.ml.t  nominal_variant_1_j.mli.t  nominal_variant_1_t.ml.t  nominal_variant_1_t.mli.t  nominal_variant_2_j.ml.t  nominal_variant_2_j.mli.t  nominal_variant_2_t.ml.t  nominal_variant_2_t.mli.t  nominal_variant_upgrader_t.ml.t  nominal_variant_upgrader_t.mli.t
test/realistic_examples/: Atdgen_universal_codec.ml  cram.t  dune  realistic_202008241.json  realistic_202103115.atd  realistic_user_fns.ml  test_json_parsing.expected  test_json_parsing.ml
test/realistic_examples.t/: realistic_202008241.atd  realistic_202103001.atd  realistic_user_fns.ml
test/realistic_examples/cramtests/: realistic.ml.t  realistic.mli.t  realistic_202008241_j.ml.t  realistic_202008241_j.mli.t  realistic_202008241_t.ml.t  realistic_202008241_t.mli.t  realistic_202103001_j.ml.t  realistic_202103001_j.mli.t  realistic_202103001_t.ml.t  realistic_202103001_t.mli.t  realistic_202103115_j.ml.t  realistic_202103115_j.mli.t  realistic_202103115_t.ml.t  realistic_202103115_t.mli.t  realistic_upgrader_t.ml.t  realistic_upgrader_t.mli.t
test/rescript_atd_opt/cramtests/: rescript_simple.ml.t  rescript_simple.mli.t  rescript_simple_1_bs.ml.t  rescript_simple_1_bs.mli.t  rescript_simple_1_t.ml.t  rescript_simple_1_t.mli.t  rescript_simple_2_bs.ml.t  rescript_simple_2_bs.mli.t  rescript_simple_2_t.ml.t  rescript_simple_2_t.mli.t  rescript_simple_upgrader_t.ml.t  rescript_simple_upgrader_t.mli.t
test/rescript_gentype/: rescript_simple_1.atd
test/rescript_gentype/cramtests/: rescript_simple.ml.t  rescript_simple.mli.t  rescript_simple_1_bs.ml.t  rescript_simple_1_bs.mli.t  rescript_simple_1_t.ml.t  rescript_simple_1_t.mli.t  rescript_simple_2_bs.ml.t  rescript_simple_2_bs.mli.t  rescript_simple_2_t.ml.t  rescript_simple_2_t.mli.t  rescript_simple_upgrader_t.ml.t  rescript_simple_upgrader_t.mli.t
test/rescript_simple/: cram.t  rescript_simple_2.atd
test/rescript_simple/cramtests/: rescript_simple.ml.t  rescript_simple.mli.t  rescript_simple_1_bs.ml.t  rescript_simple_1_bs.mli.t  rescript_simple_1_j.ml.t  rescript_simple_1_j.mli.t  rescript_simple_1_t.ml.t  rescript_simple_1_t.mli.t  rescript_simple_2_bs.ml.t  rescript_simple_2_bs.mli.t  rescript_simple_2_j.ml.t  rescript_simple_2_j.mli.t  rescript_simple_2_t.ml.t  rescript_simple_2_t.mli.t  rescript_simple_upgrader_t.ml.t  rescript_simple_upgrader_t.mli.t
test/simple_transitive_change/: cram.t  dune  simple_transitive_change_1.atd  simple_transitive_change_1.json  simple_transitive_change_2.atd  simple_transitive_change_2.json  simple_transitive_change_user_fns.ml
test/simple_transitive_change.t/: simple_transitive_change_user_fns.ml
test/simple_transitive_change/cramtests/: simple_transitive_change.ml.t  simple_transitive_change.mli.t  simple_transitive_change_1_j.ml.t  simple_transitive_change_1_j.mli.t  simple_transitive_change_1_t.ml.t  simple_transitive_change_1_t.mli.t  simple_transitive_change_2_j.ml.t  simple_transitive_change_2_j.mli.t  simple_transitive_change_2_t.ml.t  simple_transitive_change_2_t.mli.t  simple_transitive_change_upgrader_t.ml.t  simple_transitive_change_upgrader_t.mli.t
test/simple_transitive_no_gen/: dune  simple_transitive_change_1.json  test_json_parsing.expected  test_json_parsing.ml
test/simple_transitive_no_gen/cramtests/: simple_transitive_change.ml.t  simple_transitive_change_1_j.ml.t  simple_transitive_change_1_j.mli.t  simple_transitive_change_1_t.ml.t  simple_transitive_change_1_t.mli.t  simple_transitive_change_2_j.ml.t  simple_transitive_change_2_j.mli.t  simple_transitive_change_2_t.ml.t  simple_transitive_change_2_t.mli.t
test/single_version/: cram.t  dune  single_version_1.atd  test_json_parsing.expected  test_json_parsing.ml
test/single_version.t/: run.t
test/single_version/cramtests/: single_version.ml.t  single_version.mli.t  single_version_1_j.ml.t  single_version_1_j.mli.t  (+4 more)
test/support/: test_runner.ml
(+30 files in other folders)
