(rule
 (targets custom_output_prefix_1_t.ml custom_output_prefix_1_t.mli
   custom_output_prefix_1_j.ml custom_output_prefix_1_j.mli
   custom_output_prefix_bar_t.ml custom_output_prefix_bar_t.mli
   custom_output_prefix_bar_j.ml custom_output_prefix_bar_j.mli
   custom_output_prefix_upgrader_t.ml custom_output_prefix_upgrader_t.mli
   custom_output_prefix.ml custom_output_prefix.mli
   custom_output_prefix_user_fns.mli)
 (deps
  (:1_atd
   (file original_output_prefix_1.atd))
  (:bar_atd
   (file original_output_prefix_bar.atd)))
 (action
  (run %{bin:stork} gen -o custom_output_prefix %{1_atd} %{bar_atd})))
