(rule
 (targets
  single_version_1_t.ml
  single_version_1_t.mli
  single_version_1_j.ml
  single_version_1_j.mli
  single_version_upgrader_t.ml
  single_version_upgrader_t.mli
  single_version.ml
  single_version.mli)
 (deps
  (:atd
   (glob_files *.atd)))
 (action
  (run %{bin:stork} gen %{atd})))

(tests
 (names test_json_parsing)
 (libraries yojson stork test_utils)
 (deps
  (glob_files *.json))
 (flags
  (:standard -linkall -g -open StdLabels -w +A-48-42-40)))

(cram
 (deps
  %{bin:stork}
  (glob_files *.{atd})))
